# dqrobotics-interface-coppeliasim

./: .gitmodules  CMakeLists.txt  README.md  boost_dependencies.cmake  dependencies.cmake  dependencies_exp.cmake  unit_tests.cpp  unix_build.sh  unix_build_install.sh  unix_remove.sh
debian/: changelog  control  copyright  rules
include/dqrobotics/interfaces/coppeliasim/: DQ_CoppeliaSimInterface.h  DQ_CoppeliaSimInterfaceZMQ.h  DQ_CoppeliaSimInterfaceZMQExperimental.h  DQ_CoppeliaSimModels.h  DQ_CoppeliaSimRobot.h  DQ_CoppeliaSimRobotZMQ.h  DQ_CoppeliaSimZmqInterface.h  DQ_CoppeliaSimZmqModels.h  DQ_CoppeliaSimZmqRobot.h  DQ_SerialCoppeliaSimRobot.h  DQ_SerialCoppeliaSimZmqRobot.h
include/dqrobotics/interfaces/coppeliasim/robots/: FrankaEmikaPandaCoppeliaSimRobot.h  FrankaEmikaPandaCoppeliaSimZMQRobot.h  FrankaEmikaPandaCoppeliaSimZmqRobot.h  URXCoppeliaSimRobot.h  URXCoppeliaSimZMQRobot.h  URXCoppeliaSimZmqRobot.h
matlab/interfaces/coppeliasim/: DQ_CoppeliaSimInterface.m  DQ_CoppeliaSimRobot.m  DQ_SerialCoppeliaSimRobot.m  JOINT_CONTROL_MODE.m  JOINT_MODE.m  test_class.m
matlab/interfaces/coppeliasim/enumeration_classes/: DQ_CoppeliaSimInterface_ENGINE.m  DQ_CoppeliaSimInterface_JOINT_CONTROL_MODE.m  DQ_CoppeliaSimInterface_JOINT_MODE.m  DQ_CoppeliaSimInterface_REFERENCE.m  URXCoppeliaSimRobot_MODEL.m
matlab/interfaces/coppeliasim/robots/: FrankaEmikaPandaCoppeliaSimRobot.m  URXCoppeliaSimRobot.m
matlab/interfaces/coppeliasim/tests/: example.m  minimal_example.m  test_class.m
src/: main.cpp  test.cpp  test_library.cpp  test_new_methods.cpp  test_panda.cpp  test_zmq.cpp  unit_tests.cpp
src/dqrobotics/interfaces/coppeliasim/: DQ_CoppeliaSimInterface.cpp  DQ_CoppeliaSimInterfaceZMQ.cpp  DQ_CoppeliaSimInterfaceZMQExperimental.cpp  DQ_CoppeliaSimModels.cpp  DQ_CoppeliaSimRobot.cpp  DQ_CoppeliaSimRobotZMQ.cpp  DQ_CoppeliaSimZmqInterface.cpp  DQ_CoppeliaSimZmqModels.cpp  DQ_CoppeliaSimZmqRobot.cpp  DQ_SerialCoppeliaSimRobot.cpp  DQ_SerialCoppeliaSimZmqRobot.cpp
src/dqrobotics/interfaces/coppeliasim/internal/: _zmq_wrapper.cpp  _zmq_wrapper.h
src/dqrobotics/interfaces/coppeliasim/robots/: FrankaEmikaPandaCoppeliaSimRobot.cpp  FrankaEmikaPandaCoppeliaSimZMQRobot.cpp  FrankaEmikaPandaCoppeliaSimZmqRobot.cpp  URXCoppeliaSimRobot.cpp  URXCoppeliaSimZMQRobot.cpp  URXCoppeliaSimZmqRobot.cpp
